--- a/assets/src/style.css
+++ b/assets/src/style.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Lato', sans-serif;
   color: #FFFFFF;
   font-weight: 700;
+  font-size: 1rem;
 
   height: 100vh;
   display: grid;
@@ -11,10 +12,12 @@ body {
 
 }
 
+/* utility classes */
+
 .box-shadow {
   -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
--moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
+  -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
+  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
 }
 
 .section-general {
@@ -22,14 +25,24 @@ box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
   background-color: #6D67D0;
 }
 
+.section-title {
+  color: #DAD8F7;
+  margin-top: 1rem;
+
+  display: flex;
+  justify-content: center;
+}
+
+.min-temperature {
+  color: #C2BFF4;
+}
+
 main {
   max-width: 68.125rem;
   display: grid;
   grid-template-columns: auto 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 32px;
-
-  /* border: 1px solid red; */
+  gap: 1.5rem;
 }
 
 /* grid layout */
@@ -55,7 +68,10 @@ main {
 
   background-image: url(../images/section-background.png);
   background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 10px;
+
+  margin-right: 0.5rem;
 }
 
 .temperature-now > img {
@@ -76,7 +92,7 @@ main {
   color: #C2BFF4;
 }
 
-.temperature-now .temperature{
+.temperature-now .temperature {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -96,14 +112,9 @@ main {
   line-height: 1.5rem;
 }
 
-.temperature-now .temperature .min-temperature {
-  color: #C2BFF4;
-}
-
 .temperature-now .statistics-wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  
+  grid-template-columns: 1fr 1fr 1fr; 
   gap: 0.5rem;
 
   margin: 0 0.75rem 0.75rem;
@@ -118,8 +129,6 @@ main {
   padding: 0.75rem 1rem;
   background-color: rgba(102, 96, 200, 0.6);
   border-radius: 10px;
-
-  
 }
 
 .temperature-now .statistics-wrapper .statistics  img {
@@ -145,10 +154,94 @@ main {
 
 /* section 2 */
 
+.air-quality {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 1rem;
+}
+
+.air-quality .section-title img {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.air-quality .main-info-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  align-items: center;
+}
+
+.air-quality .main-info-wrapper h3 {
+  font-size: 1.125rem;
+  line-height: 1.375rem;
+  color: #87EBCD;
+}
+
+.air-quality .main-info-wrapper h2 {
+   font-size: 2.5rem;
+   line-height: 3rem;
+}
+
+.air-quality .additional-info-wrapper {
+  display: flex;
+  gap: 1rem;
+}
+
+.air-quality .additional-info-wrapper .additional-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0;
+
+  font-size: 0.75rem;
+  font-weight: 400;
+  color: #E7E6FB;
+}
+
+.air-quality .additional-info-wrapper .additional-info span {
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: #87EBCD;
+}
+
 /* section 3 */
+
+.sun-time {
+  padding: 1rem;
+}
+
+.sun-time .section-title {
+  margin-bottom: 1.5rem;
+}
 
 /* section 4 */
 .week-weather {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 0.75rem;
+  padding: 40px;
 }
+
+.week-weather .next-days-weather-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  
+  justify-content: center;
+  align-items: center;
+}
+
+.week-weather .next-days-weather-wrapper .day-of-the-week {
+  font-size: 0.875rem;
+  color: #DAD8F7;
+}
+
+.week-weather .next-days-weather-wrapper img {
+  width: 4rem;
+  height: 4rem;
+}
+
