--- a/assets/src/style.css
+++ b/assets/src/style.css
@@ -7,7 +7,8 @@ body {
   height: 100vh;
   display: grid;
   place-content: center;
-  background: url(../images/Background.png) no-repeat;
+  background-image: url(../images/Background.png);
+  background-repeat: no-repeat;
   background-size: cover;
 
 }
